// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ImpactedSwitchesByParamDonut (firmware) should render 1`] = `
@supports (-webkit-backdrop-filter:none) or (backdrop-filter:none) {

}

<div
  style="position: relative; overflow: hidden; width: 1280px; height: 800px;"
>
  <svg
    baseProfile="full"
    height="800"
    style="position:absolute;left:0;top:0;user-select:none"
    version="1.1"
    width="1280"
    xmlns="http://www.w3.org/2000/svg"
    xmlns:xlink="http://www.w3.org/1999/xlink"
  >
    <rect
      fill="none"
      fill-opacity="1"
      height="800"
      id="0"
      width="1280"
      x="0"
      y="0"
    />
    <g>
      <path
        d="M640 32A368 368 0 1 1 640 768L640 712A312 312 0 0 0 640 88Z"
        fill="#66B1E8"
        stroke="#FFFFFF"
        stroke-linejoin="round"
      />
      <path
        d="M640 768A368 368 0 1 1 640 32L640 88A312 312 0 0 0 640 712Z"
        fill="#EC7100"
        stroke="#FFFFFF"
        stroke-linejoin="round"
      />
      <path
        d="M-45 -5l58 0l0 50l-58 0Z"
        fill="rgb(0,0,0)"
        fill-opacity="0"
        stroke="#ccc"
        stroke-width="0"
        transform="translate(640 380)"
      />
      <path
        d="M-8 0l16 0l0 16l-16 0Z"
        fill="none"
        transform="translate(640 380)"
      />
      <text
        dominant-baseline="central"
        fill="#333333"
        style="font-size:12px;font-family:'Open Sans', sans-serif;font-weight:400;"
        text-anchor="middle"
        transform="translate(640 380)"
        xml:space="preserve"
        y="8"
      >
        Switch firmwares
      </text>
      <path
        d="M-0.5 20l1 0l0 20l-1 0Z"
        fill="none"
        transform="translate(640 380)"
      />
      <text
        dominant-baseline="central"
        fill="#333333"
        style="font-size:16px;font-family:'Montserrat', sans-serif;font-weight:600;"
        text-anchor="middle"
        transform="translate(640 380)"
        y="30"
      >
        2
      </text>
    </g>
  </svg>
</div>
`;

exports[`ImpactedSwitchesByParamDonut (model) should render 1`] = `
@supports (-webkit-backdrop-filter:none) or (backdrop-filter:none) {

}

<div
  style="position: relative; overflow: hidden; width: 1280px; height: 800px;"
>
  <svg
    baseProfile="full"
    height="800"
    style="position:absolute;left:0;top:0;user-select:none"
    version="1.1"
    width="1280"
    xmlns="http://www.w3.org/2000/svg"
    xmlns:xlink="http://www.w3.org/1999/xlink"
  >
    <rect
      fill="none"
      fill-opacity="1"
      height="800"
      id="0"
      width="1280"
      x="0"
      y="0"
    />
    <g>
      <path
        d="M640 32A368 368 0 1 1 640 768L640 712A312 312 0 0 0 640 88Z"
        fill="#66B1E8"
        stroke="#FFFFFF"
        stroke-linejoin="round"
      />
      <path
        d="M640 768A368 368 0 1 1 640 32L640 88A312 312 0 0 0 640 712Z"
        fill="#EC7100"
        stroke="#FFFFFF"
        stroke-linejoin="round"
      />
      <path
        d="M-45 -5l56.5 0l0 50l-56.5 0Z"
        fill="rgb(0,0,0)"
        fill-opacity="0"
        stroke="#ccc"
        stroke-width="0"
        transform="translate(640 380)"
      />
      <path
        d="M-6.5 0l13 0l0 16l-13 0Z"
        fill="none"
        transform="translate(640 380)"
      />
      <text
        dominant-baseline="central"
        fill="#333333"
        style="font-size:12px;font-family:'Open Sans', sans-serif;font-weight:400;"
        text-anchor="middle"
        transform="translate(640 380)"
        xml:space="preserve"
        y="8"
      >
        Switch models
      </text>
      <path
        d="M-0.5 20l1 0l0 20l-1 0Z"
        fill="none"
        transform="translate(640 380)"
      />
      <text
        dominant-baseline="central"
        fill="#333333"
        style="font-size:16px;font-family:'Montserrat', sans-serif;font-weight:600;"
        text-anchor="middle"
        transform="translate(640 380)"
        y="30"
      >
        2
      </text>
    </g>
  </svg>
</div>
`;
